--- a/README.Rmd
+++ b/README.Rmd
@@ -14,10 +14,13 @@ knitr::opts_chunk$set(
 # Example site file project
 
 <!-- badges: start -->
+[![WIP](https://img.shields.io/badge/WIP-F3CA40)](https://img.shields.io/badge/WIP-F3CA40)
 [![Tutorial](https://img.shields.io/badge/Tutorial-EA3788)](https://img.shields.io/badge/Tutorial-EA3788)
 <!-- badges: end -->
 
 A skeleton framework for setting up a site-file based project workflow using
 the malariaverse, orderly2 and the cluster.
 
-<img src="malaria_project_image.png" alt="Malaria Software Project" width="600">
+```{r, echo=FALSE, out.width='600px', fig.align='center'}
+knitr::include_graphics("malaria_project_image.png")
+```
