--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,10 @@ knitr::opts_chunk$set(
 A skeleton framework for setting up a site-file based project workflow using
 the malariaverse, orderly2 and the cluster.
 
+None of this code is meant to run, but as a guide for setting up a site file 
+project. Consider the structure, code examples and comments when setting up for
+your own use.
+
 ```{r, echo=FALSE, out.width='600px', fig.align='center'}
 knitr::include_graphics("malaria_project_image.png")
 ```
